Added config and connector repo as maven modules, reference theme as submodule